2002-07-16  Hendrik Ruijter  <Hendrik.Ruijter@axis.com>
2002-07-16  Mark Salter  <msalter@redhat.com>

	* include/net/net.h: Add __tcp_abort prototype.

	* src/net/icmp.c: The default handler can be replaced by a
	user defined handler which handles all ICMP segments.

	* src/net/ping.c
	(handle_icmp): Only ICMP Echo Reply segments must be counted and
	ICMP Echo Requests are handled in the user defined handler.

	* src/net/tcp.c
	(do_abort, __tcp_abort): Send an RST flag in order to abort a
	connection. May use a delay to send the flag.

2002-07-15  Mark Salter  <msalter@redhat.com>

	* src/net/net_io.c: Increase size of out_buf to 1024 bytes.

2002-07-11  Gary Thomas  <gary@chez-thomas.org>

	* src/io.c (mon_read_char_with_timeout): Ensure interrupts are
	disabled on all I/O channels, except for the current console.
	This is done when selecting a console, as this process causes
	the interrupt state to be inherited from the current console.

2002-07-09  Gary Thomas  <gary@chez-thomas.org>
2002-07-09  Grant Edwards <grante@visi.com>

	* src/net/udp.c: 
	* src/net/net_io.c: 
	* src/net/ip.c: 
	* src/net/bootp.c: 
	* src/net/arp.c: 
	* include/net/net.h: 
	* include/net/bootp.h: 
	* cdl/redboot.cdl: Add basic support for non-local networking
	using a single gateway.  Based on contribution from Grant Edwards.

2002-07-01  Gary Thomas  <gary@chez-thomas.org>

	* src/net/tftp_client.c: 
	* src/net/http_client.c: 
	* src/fs/disk.c: 
	* src/xyzModem.h: 
	* src/xyzModem.c: 
	* src/load.c: 
	* include/net/tftp_support.h: 
	* include/net/http.h: 
	* include/redboot.h: 
	* cdl/redboot.cdl: Make 'load' command stream I/O table driven.

2002-05-31  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_installing.sgml: Updated the remaining installation
	instructions (well, the top mode details anyway).

2002-05-29  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_cmds.sgml: Changed format of fis commands.

	* doc/redboot_installing.sgml: Updated installation instructions